--- a/css/style.css
+++ b/css/style.css
@@ -47,42 +47,9 @@ body {
   color: #555;
 }
 
-.section-hero {
-  background-color: #fdf2e9;
-
-  padding: 9.6rem 0;
-}
-
-.hero {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
-  align-items: center;
-
-  max-width: 130rem;
-  margin: 0 auto;
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  letter-spacing: -0.6px;
-  font-weight: 700;
-  color: #333;
-
-  margin-bottom: 3.2rem;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.5;
-
-  margin-bottom: 4.8rem;
-}
-
-.hero-img {
-  width: 100%;
-}
+/***************************/
+/* GENERAL COMPONENTS*/
+/***************************/
 
 .btn:link,
 .btn:visited {
@@ -124,6 +91,76 @@ body {
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+/***************************/
+/* HEADER */
+/***************************/
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #fdf2e9;
+
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2.2rem;
+}
+
+/***************************/
+/* HERO */
+/***************************/
+
+.section-hero {
+  background-color: #fdf2e9;
+
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.5;
+
+  margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  width: 100%;
+}
+.hero {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+
+  max-width: 130rem;
+  margin: 0 auto;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  letter-spacing: -0.6px;
+  font-weight: 700;
+  color: #333;
+
+  margin-bottom: 3.2rem;
 }
 
 .delivered-meals {
