--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,21 @@ body {
   margin-right: 1.6rem !important;
 }
 
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2--cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
 /***************************/
 /* NAVIGATION */
 /***************************/
@@ -172,13 +187,11 @@ body {
 
 .hero {
   display: grid;
+  max-width: 130rem;
+
   grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
   align-items: center;
-
-  max-width: 130rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
 }
 
 .hero-description {
@@ -190,15 +203,6 @@ body {
 
 .hero-img {
   width: 100%;
-}
-.hero {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
-  align-items: center;
-
-  max-width: 130rem;
-  margin: 0 auto;
 }
 
 .heading-primary {
@@ -243,4 +247,13 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/***************************/
+/* HOW IT WORKS */
+/***************************/
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
 }
