--- a/css/style.css
+++ b/css/style.css
@@ -1,116 +1,3 @@
-/*
-
---- 01 TYPOGRAPHY SYSTEM ---
-
-- FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- FONT WEIGHT SYSTEM
-400 / 500 / 600 / 700
-
-- LINE HEIGHT SYSTEM (unitless)
-DEFAULT / 1 /
-/ 1.05 / 1.6
-
-
-
---- 02 COLOR SYSTEM ---
-- PRIMARY COLOR #e67e22
-- TINTS         #fdf2e9
-- SHADES        #cf711f
-- ACCENTS       
-- GREYS         #555 #333
-
---- 03 SHADOWS 
-
---- 04 BORDER RADIUS
-
-DEFAULT / 9px /
-
---- 05 WHITE SPACE
-- SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-*/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 0.625rem;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/***************************/
-/* GENERAL COMPONENTS*/
-/***************************/
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-
-  font-size: 2rem;
-  font-weight: 600;
-  text-decoration: none;
-
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-
-  transition: background-color 300ms;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-.grid--2--cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
 /***************************/
 /* NAVIGATION */
 /***************************/
@@ -205,16 +92,6 @@ body {
   width: 100%;
 }
 
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  letter-spacing: -0.6px;
-  font-weight: 700;
-  color: #333;
-
-  margin-bottom: 3.2rem;
-}
-
 .delivered-meals {
   display: flex;
   align-items: center;
@@ -255,5 +132,58 @@ body {
 
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
+}
+
+.step-text-box {
+}
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+
+  margin-bottom: 1.2rem;
+}
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.step-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  background-color: #fdf2e9;
+
+  width: 60%;
+  padding-bottom: 60%;
+  z-index: -2;
+}
+
+.step-img-box::after {
+  background-color: #fae5d3;
+
+  width: 45%;
+  padding-bottom: 45%;
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
 }
