--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,34 @@
 }
 
 /***************************/
+/* FEATURED IN */
+/***************************/
+
+.section-featured-in {
+  padding: 4.8rem 0 3.2rem 0;
+}
+.heading-featured-in {
+  color: #777;
+  font-size: 1.4rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: center;
+
+  margin-bottom: 2.4rem;
+}
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 0.7;
+}
+
+/***************************/
 /* HOW IT WORKS */
 /***************************/
 
