--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   display: inline-block;
 
   text-decoration: none;
-  color: #333;
+  color: #333;1
   font-weight: 500;
   font-size: 1.8rem;
 
@@ -214,4 +214,126 @@
 
 .step-img {
   width: 35%;
+}
+
+/***************************/
+/* MEALS */
+/***************************/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal {
+  border-radius: 1.1rem;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  overflow: hidden;
+
+  transition: all 500ms;
+}
+
+.meal:hover{
+  transform: translateY(-0.5rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+  display: flex;
+  gap: 0.4rem;
+
+  margin-bottom: 1.2rem;
+}
+
+.tag {
+  display: inline-block;
+
+  padding: 0.4rem 0.8rem;
+  border-radius: 100px;
+
+  color: #333;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.tag--vegeterian {
+  background-color: #51cf66;
+}
+
+.tag--vegan {
+  background-color: #82c91e;
+}
+
+.tag--paleo {
+  background-color: #f59f00;
+}
+
+.meal-img {
+  width: 100%;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
+
+.meal-name {
+  font-size: 2rem;
+  color: #333;
+  font-weight: 600;
+
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
+  list-style: none;
+}
+
+.meal-attribute {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+
+  font-size: 1.8rem;
+}
+
+.diets{
+
+}
+
+.list{
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+
+  list-style: none;
+}
+
+.list-item{
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  
+  font-size: 1.8rem;
+}
+
+.list-icon{
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
+.all-recipes{
+  text-align: center;
+  font-size: 1.8rem;
 }
