--- a/css/general.css
+++ b/css/general.css
@@ -19,7 +19,7 @@ DEFAULT / 1 /
 - TINTS         #fdf2e9 #fae5d3
 - SHADES        #cf711f
 - ACCENTS       
-- GREYS         #555 #333
+- GREYS         #555 #333 #6f6f6f
 
 --- 03 SHADOWS 
 
