--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   display: inline-block;
 
   text-decoration: none;
-  color: #333;1
+  color: #333;
   font-weight: 500;
   font-size: 1.8rem;
 
@@ -232,10 +232,9 @@
   transition: all 500ms;
 }
 
-.meal:hover{
+.meal:hover {
   transform: translateY(-0.5rem);
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
-
 }
 
 .meal-content {
@@ -307,37 +306,13 @@
   font-size: 1.8rem;
 }
 
-.diets{
-
+.diets {
 }
 
-.list{
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-
-  list-style: none;
-}
-
-.list-item{
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-  
-  font-size: 1.8rem;
-}
-
-.list-icon{
-  width: 3rem;
-  height: 3rem;
-  color: #e67e22;
-}
-
-.all-recipes{
+.all-recipes {
   text-align: center;
   font-size: 1.8rem;
 }
-
 
 /***************************/
 /* TESTIMONIALS */
@@ -351,38 +326,37 @@
   background-color: #fdf2e9;
 }
 
-.testimonials-container{
-  padding: 9.6rem ;
-
+.testimonials-container {
+  padding: 9.6rem;
 }
 
-.testimonials{
+.testimonials {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   row-gap: 4.8rem;
   column-gap: 8rem;
 }
 
-.testimonial-img{
+.testimonial-img {
   width: 6.4rem;
   border-radius: 50%;
 
   margin-bottom: 1.2rem;
 }
 
-.testimonial-text{
+.testimonial-text {
   font-size: 1.8rem;
   line-height: 1.8;
 
   margin-bottom: 1.6rem;
 }
 
-.testimonial-name{
+.testimonial-name {
   font-size: 1.6rem;
   color: #6f6f6f;
 }
 
-.gallery{
+.gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
@@ -390,17 +364,102 @@
   padding: 1.6rem;
 }
 
-.gallery-item{
+.gallery-item {
   overflow: hidden;
 }
 
-.gallery-item img{
+.gallery-item img {
   display: block;
   width: 100%;
 
   transition: all 500ms;
 }
 
-.gallery-item img:hover{
+.gallery-item img:hover {
   transform: scale(1.1);
+}
+
+/***************************/
+/* PIRCING */
+/***************************/
+
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  border-radius: 11px;
+  width: 75%;
+}
+
+.pricing-plan--starter {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  overflow: hidden;
+
+  position: relative;
+}
+
+.pricing-plan--complete::after {
+  content: "Best value";
+  background-color: #ffd43b;
+  color: #333;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+
+  padding: 0.8rem 8rem;
+  width: 120px;
+  transform: rotate(45deg);
+
+  position: absolute;
+  top: 8%;
+  right: -26%;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+
+  margin-bottom: 3.2rem;
+}
+
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  columns: #333;
+
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+
+  margin-right: 0.8rem;
+}
+
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sign-up {
+  text-align: center;
+  margin-top: 4.8rem;
 }
