--- a/css/general.css
+++ b/css/general.css
@@ -17,7 +17,7 @@ DEFAULT / 1 /
 --- 02 COLOR SYSTEM ---
 - PRIMARY COLOR #e67e22
 - TINTS         #fdf2e9 #fae5d3
-- SHADES        #cf711f
+- SHADES        #cf711f #45260a
 - ACCENTS       
 - GREYS         #555 #333 #6f6f6f
 
@@ -93,6 +93,7 @@ body {
   margin-bottom: 1.6rem;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -103,10 +104,13 @@ body {
 
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
+  border: none;
+  cursor: pointer;
 
   transition: all 300ms;
 }
 
+.btn,
 .btn--full:link,
 .btn--full:visited {
   background-color: #e67e22;
@@ -129,6 +133,20 @@ body {
   background-color: #fdf2e9;
 
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+
+  padding: 1.2rem;
+}
+
+.btn--form:hover,
+.btn--form:active {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -203,6 +221,11 @@ body {
 
 .grid--center-v {
   align-items: center;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER CLASSES */
