--- a/css/general.css
+++ b/css/general.css
@@ -1,36 +1,60 @@
 /*
+--- TYPOGRAPHY SYSTEM
 
---- 01 TYPOGRAPHY SYSTEM ---
-
-- FONT SIZE SYSTEM (px)
+- Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
-- FONT WEIGHT SYSTEM
-400 / 500 / 600 / 700
+- Font weights
+Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
 
-- LINE HEIGHT SYSTEM (unitless)
-DEFAULT / 1 /
-/ 1.05 / 1.6
+- Line heights
+Default: 1
+Small: 1.05
+Medium: 1.2
+Paragraph default: 1.6
+Large: 1.8
 
+- Letter spacing
+-0.5px
+0.75px
 
+--- COLORS
+ 
+- Primary: #e67e22
+- Tints:
+#fdf2e9
+#fae5d3
+#eb984e
 
---- 02 COLOR SYSTEM ---
-- PRIMARY COLOR #e67e22
-- TINTS         #fdf2e9 #fae5d3
-- SHADES        #cf711f #45260a
-- ACCENTS       
-- GREYS         #555 #333 #6f6f6f
+- Shades: 
+#cf711f
+#45260a
 
---- 03 SHADOWS 
+- Accents:
+- Greys
 
---- 04 BORDER RADIUS
+#888
+#767676 (lightest grey allowed on #fff)
+#6f6f6f (lightest grey allowed on #fdf2e9)
+#555
+#333
 
-DEFAULT / 9px /
+--- SHADOWS
 
---- 05 WHITE SPACE
-- SPACING SYSTEM (px)
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
+--- BORDER-RADIUS
+
+Default: 9px
+Medium: 11px
+
+--- WHITESPACE
+
+- Spacing system (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
 */
 
 * {
@@ -41,6 +65,7 @@ DEFAULT / 9px /
 
 html {
   font-size: 0.625rem;
+  overflow-x: hidden;
 }
 
 body {
@@ -48,6 +73,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /***************************/
