--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,25 @@
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+
+.btn-mobile-nav {
+  border: none;
+  background-color: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /***************************/
 /* HEADER */
 /***************************/
@@ -56,6 +75,7 @@
 
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
