--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
 
 .btn-mobile-nav {
   border: none;
-  background-color: none;
+  background-color: transparent;
   cursor: pointer;
 
   display: none;
